# causality-sandbox

./: LICENSE  README.md  pyproject.toml
causality_sandbox/: __init__.py
causality_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
causality_sandbox/methods/: __init__.py  difference_in_differences.py  instrumental_variable.py  propensity_score.py  regression_discontinuity.py  synthetic_control.py
causality_sandbox/utils/: __init__.py  balance.py  overlap.py  validation.py
examples/: example_did.py  example_iv.py  example_psm.py  example_rdd.py  example_synthetic_control.py
tests/: test_did.py  test_iv.py  test_psm.py  test_rdd.py  test_synthetic_control.py
